# session-intelligence

./: .gitignore  CLAUDE.md  LEAN_MCP_IMPLEMENTATION.md  LICENSE  README.md  pyproject.toml  test_agent_system.py
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: session-intelligence-daemon.sh  session-intelligence.service.example
src/: http_lean_server.py  lean_mcp_interface.py  lean_server.py
src/core/: __init__.py  session_engine.py
src/models/: __init__.py  session_models.py
src/persistence/: __init__.py  base.py  config.py  database.py  migration.py  postgresql.py  sqlite.py
src/session/: __init__.py  server.py
src/transport/: __init__.py  http_server.py  mcp_session_manager.py  security.py
src/utils/: __init__.py  token_limiter.py
tests/: conftest.py  test_session_models.py
tests/debug/: test_datetime_fix.py  test_engine_debug.py  test_engine_debug2.py  test_engine_debug3.py  test_path.py  test_query_debug.py
tests/integration/: test_agent_system.py  test_large_response.py  test_lean_mcp.py  test_simplified_lean.py  test_specific_limit.py  test_token_limiting.py
tests/live/: live_test.py  live_test_engine.py  mcp_live_test.py  test_async_notebook.py  test_lean_tools.py  test_realistic_scenario.py
