[project]
name = "session-intelligence"
version = "1.0.0"
description = "Session intelligence and lifecycle management MCP server for Claude Code framework - consolidates 42+ session management functions"
authors = [
    {name = "Claude Code Agent Ecosystem Team", email = "claude-code@anthropic.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.11"
fastmcp = ">=1.0.0"
pydantic = ">=2.0.0"
aiofiles = ">=23.0.0"
watchdog = ">=3.0.0"
# HTTP transport dependencies
fastapi = ">=0.109.0"
uvicorn = ">=0.27.0"
# PostgreSQL support (optional, for production)
asyncpg = ">=0.29.0"

[tool.pixi.pypi-dependencies]
session-intelligence = { path = ".", editable = true }
typing-extensions = ">=4.0.0"
pathlib2 = ">=2.3.0"
dataclasses-json = ">=0.6.0"
python-dateutil = ">=2.8.0"
scikit-learn = ">=1.3.0"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
# HTTP transport dependencies
aiosqlite = ">=0.19.0"
sse-starlette = ">=2.0.0"

[tool.pixi.tasks]
lean-server = { cmd = "python src/lean_server.py", env = { PYTHONPATH = "src" } }
mcp-server = { cmd = "python -m session.server", env = { PYTHONPATH = "src" } }
# HTTP transport server
http-server = { cmd = "python src/http_lean_server.py", env = { PYTHONPATH = "src" } }
http-server-postgres = { cmd = "python src/http_lean_server.py --backend postgresql", env = { PYTHONPATH = "src" } }
# Daemon management
start-daemon = { cmd = "scripts/session-intelligence-daemon.sh start", env = { PYTHONPATH = "src" } }
stop-daemon = { cmd = "scripts/session-intelligence-daemon.sh stop" }
daemon-status = { cmd = "scripts/session-intelligence-daemon.sh status" }
# Database migration tasks
migrate-local-to-global = { cmd = "python -m persistence.migration local-to-global", env = { PYTHONPATH = "src" } }
migrate-to-postgres = { cmd = "python -m persistence.migration sqlite-to-postgres", env = { PYTHONPATH = "src" } }
db-export = { cmd = "python -m persistence.migration export", env = { PYTHONPATH = "src" } }
# Quality tasks
test = "pytest . -v --ignore=.pixi"
lint = "ruff check src/ --fix"
format = "black src/ ."
type-check = "mypy src/"
quality = { depends-on = ["lint", "type-check"] }
check-all = { depends-on = ["test", "quality"] }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true